--- a/src/index.html
+++ b/src/index.html
@@ -23,12 +23,16 @@
     <div class="container">
       <div class="row">
         <div class="col-4"></div>
-        <div class="col-4 bg-light" id="pokerCard">
+        <div class="col-4 bg-light position-relative" id="pokerCard">
           <p id="pokerCardIcon">♦</p>
           <p id="pokerCardNumber">J</p>
           <p id="samePokerIcon">♦</p>
         </div>
-        <div class="col-4"></div>
+        <div class="col-4">
+          <button type="button" class="btn btn-danger W-50">
+            LET'S RANDOMIZE
+          </button>
+        </div>
       </div>
     </div>
     <script
