--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
           <p id="samePokerIcon">♦</p>
         </div>
         <div class="col-4">
-          <button type="button" class="btn btn-danger W-50">
+          <button type="button" class="btn btn-danger W-50" id="newCard">
             LET'S RANDOMIZE
           </button>
         </div>
