fixing visual stuff

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 bg-light mx-auto">
-          <h1>♦ ♥ ♠ ♣Poker Card Generator♦ ♥ ♠ ♣</h1>
+          <h1 id="title" class="mx-auto">♦ ♥ ♠ ♣Poker Card Generator♦ ♥ ♠ ♣</h1>
         </div>
       </div>
       <div class="row">
